--- a/config.conf
+++ b/config.conf
@@ -1,21 +1,21 @@
 [info]
 #开始在一起的日期，格式参考 2022-06-24
-start_date=2022-06-24
+start_date=2022-10-07
 #你女朋友所在的城市，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city1=昆明
+city1=辛集
 #你女朋友的家乡，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city2=腾冲
+city2=石家庄
 #你女朋友的生日，注意格式只写*月*日 如："07-21"
-birthday_lover=07-21
+birthday_lover=08-22
 #你的生日,注意格式只写*月*日 如："07-21"
-birthday_my=05-04
+birthday_my=03-06
 #以下为微信测试号的参数，在申请时会显示
-app_id=wxbc471cb
-app_secret=c4149ff570
+app_id=wx758c666cc8e4f5f7
+app_secret=ac3d06056a1f269e5d3765a06aae1237
 #消息模板ID，在微信测试号中添加模板会自动生成ID
-template_id=o_H3x859-mrYPv2ynphC
+template_id=K-uwlMTyKDXXDzJF5-gSCH4KY05O_mQBSpOWDqJ_o0I
 #接收消息的用户ID，让你的女朋友扫微信测试号的二维码，获取微信用户ID
-user_id=oB3
+user_id=omf645lmqES5BLAboB99NpuzwCSI，omf645lpQkH3nY3i_qGoM9Oa82Nc
 #如有多个女朋友或者女朋友有多个微信，请使用以下格式,","隔开
 #user_id=****,***,*****
 
